2002-01-31  John Sullivan  <sullivan@apple.com>

	* WebKit.pbproj: Removed -O0, so it will now get all the same
	warnings as pbxbuild gets.

2002-01-31  Kenneth Kocienda  <kocienda@apple.com>

        Removed dependency on WC versions of these files
        
	* History.subproj/WKBackForwardList.h:
	* History.subproj/WKBackForwardList.m:
	* History.subproj/WKURIEntry.h:
	* History.subproj/WKURIEntry.m:
	* WebKit.pbproj/project.pbxproj:

2002-01-31  John Sullivan  <sullivan@apple.com>

	* WebKit.pbproj:
	Marked WKURIList.h as a public header

2002-01-30  Richard Williamson  <rjw@apple.com>

	* WebView.subproj/WKDefaultWebController.mm: (-[WKDefaultWebController
	createFrameNamed:for:inParent:]):
	* WebView.subproj/WKWebDataSource.mm: (-[WKWebDataSource documentTextFromDOM]):

2002-01-30  Richard Williamson  <rjw@apple.com>

    Cleaned up API w/ respect to frames.
    
	* WebView.subproj/WKDefaultWebController.h:
	* WebView.subproj/WKDefaultWebController.mm: (-[WKDefaultWebController
	setView:andDataSource:]), (-[WKDefaultWebController
	createFrameNamed:for:inParent:]):
	* WebView.subproj/WKWebController.h:
	* WebView.subproj/WKWebDataSource.h:

2002-01-30  Kenneth Kocienda  <kocienda@apple.com>

        Added *.lo, *.la, Icon, and .libs to .cvsignore files
        
	* .cvsignore:

2002-01-29  Richard Williamson  <rjw@apple.com>

	* ChangeLog:
	* WebView.subproj/WKDefaultWebController.h:
	* WebView.subproj/WKDefaultWebController.mm: (-[WKDefaultWebController
	setView:andDataSource:]), (-[WKDefaultWebController dataSourceForView:]):

2002-01-29  Richard Williamson  <rjw@apple.com>

	* WebView.subproj/WKDefaultWebController.mm: (-[WKDefaultWebController
	setView:andDataSource:]):

2002-01-29  Richard Williamson  <rjw@apple.com>

    First pass at frame code.  Still needs lots of cleanup.
    
	* WebKit.pbproj/project.pbxproj:
	* WebView.subproj/WKDefaultWebController.h:
	* WebView.subproj/WKDefaultWebController.mm: (-[WKDefaultWebController init]):