@@ -1,5 +1,13 @@
 2002-01-31  John Sullivan  <sullivan@apple.com>
 
+	* History.subproj/WKURIList.m: (newURIListNode):
+	retain entries before adding them to list. The node-freeing
+	routine was releasing, but the node-adding routine wasn't
+	retaining. Bad asymmetry, made up for by WebViewTest not
+	autoreleasing. I fixed that too.
+
+2002-01-31  John Sullivan  <sullivan@apple.com>
+
 	* WebKit.pbproj: Removed -O0, so it will now get all the same
 	warnings as pbxbuild gets.
 
